<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InteleConnect</string>
    <string name="menu_settings">Settings</string>
    <string name="account_type">com.intelerad</string>
    <string name="account_spec_key">uri_spec_key</string>
    <string name="account_hostname_key">hostname_key</string>
    <string name="account_strong_name_key">strong_name_key</string>
    <string name="account_sesssion_id_key">session_id_key</string>
    <string name="account_permutation_key">permutation_key</string>
    <string name="pacshost">hostname</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="portal_login_username_label">username</string>
    <string name="portal_login_password_label">password</string>
    <string name="portal_login_pacs_label">pacs</string>
    <string name="portal_login_button_label">Login</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_accounts">Login to your account</string>
    <string name="submit">submit</string>
    <string name="loging_in">Attemping to login&#8230;</string>
    <string name="error">There was an error while processing</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_case_viewer">CaseViewerActivity</string>
    <string name="title_activity_search">Search</string>
    <string name="search_label"></string>
    <string name="search_hint">Patient Search</string>
    <string name="description_search">Search</string>
    <string name="title_activity_dataset_selector">Dataset Selector</string>
    <string name="title_activity_dataset_viewer">Dataset Viewer</string>
    <string name="diagnostic_disclaimer">Images in InteleConnect are intended for review only and are not appropriate for diagnostic purposes. Please use InteleViewer for diagnostic viewing.</string>
    <string name="accession_number_label">Accession Number &lt;b>%1s&lt;/b></string>
    <string name="study_date_label">Study Date &lt;b>%1s&lt;/b></string>
    <string name="referring_physcian_label">Referring Physician &lt;b>%1s&lt;/b></string>
    <string name="radiologist_label">Radiologist &lt;b>%1s&lt;/b></string>
    <string name="patient_id_label">Patient ID %1s</string>
    <string name="notification_description_label">Critical result update for %1s</string>
    <string name="notification_update_label">Status updated on %1s</string>
    <string name="pending_label">Pending</string>
    <string name="title_search_query">Search for patients \"&lt;b>%1s&lt;/b>\"</string>
    <string name="order_list_accesion_label">ACCN %1s</string>
    <string name="title_activity_order_list"> </string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="in_progress">In Progress</string>
    <string name="no_images">No Images</string>

</resources>