<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/portal_login_pacs_label"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/pacs_host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="text"
        android:singleLine="true"
        android:text="@string/pacshost" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/portal_login_username_label"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/pacs_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="text"
        android:singleLine="true"
        android:text="@string/username" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/portal_login_password_label"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/pacs_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:inputType="textPassword"
        android:singleLine="true"
        android:text="@string/password" />

    <!-- Login button -->

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/portal_login_button_label" />

</LinearLayout>